Change CHRLEN file for FREEEC

--- a/settings/boxtel_hg38.ini
+++ b/settings/boxtel_hg38.ini
@@ -227,7 +227,7 @@ FREEC_QUEUE	all.q
 FREEC_TIME	8:0:0
 FREEC_THREADS	8
 FREEC_MEM	80
-FREEC_CHRLENFILE	/hpc/pmc_vanboxtel/data/homo_sapiens.GRCh38.GATK.illumina/Homo_sapiens.GRCh38.GATK.illumina.len
+FREEC_CHRLENFILE	/hpc/pmc_vanboxtel/data/homo_sapiens.GRCh38.GATK.illumina/Homo_sapiens_assembly38.len
 FREEC_CHRFILES	/home/pmc_research/mroosmalen/pmc_vanboxtel/data/homo_sapiens.GRCh38.GATK.illumina/chr_files
 FREEC_PLOIDY	2
 FREEC_WINDOW	1000
@@ -243,7 +243,7 @@ SV_MANTA	no
 GRIDSS_QUEUE	all.q
 GRIDSS_THREADS	8
 GRIDSS_MEM	30
-GRIDSS_TIME	8:0:0
+GRIDSS_TIME	24:0:0
 
 ##MANTA
 MANTA_QUEUE	all.q
