--- a/settings/boxtel_hg38.ini
+++ b/settings/boxtel_hg38.ini
@@ -38,6 +38,9 @@ VT_PATH	/hpc/local/CentOS7/pmc_vanboxtel/bin/vt
 # Copy Number
 FREEC_PATH	/hpc/local/CentOS7/pmc_vanboxtel/bin/FREEC-11.4/src
 
+# Telomerecat
+TELOMERECAT_PATH	/hpc/pmc_vanboxtel/tools/telomerecat/venv_2.7.12/bin/activate
+
 # SV
 MANTA_PATH	/hpc/local/CentOS7/pmc_vanboxtel/bin/manta-1.5.0.centos6_x86_64/bin
 DELLY_PATH	/hpc/local/CentOS7/pmc_vanboxtel/bin/delly-0.7.2
@@ -67,6 +70,7 @@ SOMATIC_VARIANTS	no
 SV_CALLING	yes
 COPY_NUMBER	yes
 BAF	yes
+TELOMERECAT yes
 FINGERPRINT	no
 ANNOTATE_VARIANTS	yes
 VCF_UTILS	no
@@ -233,6 +237,14 @@ FREEC_PLOIDY	2
 FREEC_WINDOW	1000
 FREEC_TELOCENTROMERIC	50000
 FREEC_MAPPABILITY_TRACKS	/hpc/pmc_vanboxtel/data/homo_sapiens.GRCh38.GATK.illumina/mappability_tracks/out100m2_hg38.gem
+
+#### TELOMERE CONFIGURATION ####
+
+## Telomerecat
+TELOMERECAT_QUEUE	all.q
+TELOMERECAT_THREADS	8
+TELOMERECAT_MEM	10
+TELOMERECAT_TIME	2:0:0
 
 #### SV Calling CONFIGURATION####
 SV_GRIDSS	yes
